fix(web): fix text overflow in user and gourd profile name in activity

--- a/actor-apps/app-web/src/styles/profile.scss
+++ b/actor-apps/app-web/src/styles/profile.scss
@@ -76,7 +76,12 @@
       font-weight: 500;
       line-height: 38px;
 
+      overflow: hidden;
+
       margin: 0;
+
+      white-space: nowrap;
+      text-overflow: ellipsis;
 
       color: $dorado;
     }
@@ -175,7 +180,12 @@
       font-weight: 500;
       line-height: 38px;
 
+      overflow: hidden;
+
       margin: 0;
+
+      white-space: nowrap;
+      text-overflow: ellipsis;
 
       color: $dorado;
     }
